znacznik_listy_ok

--- a/znacznik_listy/index.html
+++ b/znacznik_listy/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>znacznik listy</title>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
+
 <body>
-    
+    <div class="list">
+        <ul>
+            <li>numer1</li>
+            <li>numer2</li>
+            <li>numer3</li>
+            <li>numer4</li>
+            <li>numer5</li>
+            <li>numer6</li>
+            <li>numer7</li>
+            <li>numer8</li>
+            <li>numer9</li>
+            <li>numer10</li>
+        </ul>
+    </div>
 </body>
+
 </html>
