--- a/animcja_kwadraty_po_kwadracie/index.html
+++ b/animcja_kwadraty_po_kwadracie/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="trasa"></div>
+        <div class="trasa">
         <div class="maly lewy"></div>
         <div class="maly prawy"></div>
+        </div>
     </div>
 </body>
 </html>
